# memories-classify

./: .gitignore  .pre-commit-config.yaml  .releaserc.yml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependatbot.yml
.github/workflows/: ci.yml  release.yml  tests.yml  update-bot.yml
classify/: __init__.py  __main__.py  classify.py  const.py  exception.py  files.py  logger.py  main.py  photo.py  settings.py  video.py
classify/processors/: files.py  image.py  photo.py  video.py
tests/: common.py  conftest.py  test_main.py  test_photo.py
tests/processors/: test_image.py  test_video.py
