[project]
name = "memories-classify"
version = "1.0.0"
description = "Sort and organize personnal photos and videos"
keywords = ["picture", "video", "organize", "sort", "encode"]
authors = [{ name = "Aohzan", email = "aohzan@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

dependencies = [
    "argparse>=1.4.0",
    "filedate>=3.0",
    "pillow>=11.1.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.1",
    "six>=1.17.0",
]

[dependency-groups]
dev = [
    "flake8>=7.1.2",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "types-pytz>=2025.1.0.20250204",
]

[project.scripts]
memories-classify = "classify.main:main"

[project.optional-dependencies]
build = [
    "uv",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[tool.semantic_release.changelog]
default_templates = { changelog_file = "CHANGELOG.md" }
